langchain rag pipeline

--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -1,20 +1,28 @@
 {
   "cells": [
     {
+      "cell_type": "code",
       "source": [
-        "!pip install langchain-community # Uncomment and run this line to install the package\n",
+        "!pip install langchain-community\n",
+        "!pip install langchain-chroma\n",
+        "!pip install langchain-huggingface\n",
+        "!pip install langchain-text-splitter\n",
         "%pip install -qU pypdf\n",
         "\n",
-        "from langchain_community.document_loaders import PyPDFLoader # This line should work after installation\n",
-        "from langchain_core.vectorstores import InMemoryVectorStore\n",
         "from pathlib import Path\n",
+        "from langchain import hub\n",
+        "from langchain_chroma import Chroma\n",
+        "from langchain_community.document_loaders import PyPDFLoader # This line should work after installation\n",
+        "from langchain_core.output_parsers import StrOutputParser\n",
+        "from langchain_core.runnables import RunnablePassthrough\n",
+        "from langchain_huggingface.embeddings import HuggingFaceEmbeddings\n",
+        "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
         "\n",
         "from IPython.display import clear_output\n",
         "clear_output()"
       ],
-      "cell_type": "code",
       "metadata": {
-        "id": "0rTLH6JhB_dT"
+        "id": "tUGbHhEY_rws"
       },
       "execution_count": 1,
       "outputs": []
@@ -39,142 +47,139 @@
         "    for chunk in response.iter_content(chunk_size=8192):\n",
         "      file.write(chunk)\n",
         "\n",
-        "  print(f\"File '{filename}' downloaded successfully.\")"
+        "  print(f\"File '{filename}' downloaded successfully.\")\n",
+        "\n",
+        "url = \"https://github.com/messi10tom/NoteG/blob/3bb03449e23aa8701f7714624ffb197215309b9f/Data/pdfs/leph101.pdf?raw=true\"\n",
+        "filename = Path('pdfs/leph101.pdf')\n",
+        "\n",
+        "# Check if the file already exists\n",
+        "\n",
+        "if not filename.exists():\n",
+        "  filename.parent.mkdir(parents=True, exist_ok=True)\n",
+        "  download_from_github_raw(url, filename)"
       ],
       "metadata": {
-        "id": "Rlc5B9lNCMcb"
+        "id": "Rlc5B9lNCMcb",
+        "outputId": "382e5d49-7ed6-4796-f365-840155be32c2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "File 'pdfs/leph101.pdf' downloaded successfully.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def loader(dir: Path) -> list:\n",
+        "    docs = []\n",
+        "\n",
+        "    for pdf in dir.glob('*.pdf'):\n",
+        "        pdf_loader = PyPDFLoader(\n",
+        "            file_path = pdf,\n",
+        "            extract_images = False\n",
+        "            )\n",
+        "        docs.extend(pdf_loader.load())\n",
+        "\n",
+        "    return docs"
+      ],
+      "metadata": {
+        "id": "5U9aDk87Dt5X"
       },
       "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
+      "source": [
+        "from langchain_huggingface import HuggingFacePipeline\n",
+        "\n",
+        "embeddings = HuggingFaceEmbeddings(model_name=\"Qwen/Qwen2.5-1.5B\")\n",
+        "hf = HuggingFacePipeline.from_model_id(\n",
+        "    model_id=\"Qwen/Qwen2.5-1.5B\",\n",
+        "    task=\"text-generation\"\n",
+        ")\n",
+        "\n",
+        "clear_output()"
+      ],
+      "metadata": {
+        "id": "ZNa3q0fBF6op"
+      },
       "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "docs = loader(Path('pdfs'))\n",
+        "\n",
+        "text_splitter = RecursiveCharacterTextSplitter(chunk_size=1000, chunk_overlap=200)\n",
+        "splits = text_splitter.split_documents(docs)\n",
+        "vectorstore = Chroma.from_documents(documents=splits, embedding=embeddings)"
+      ],
       "metadata": {
-        "id": "8FSXCJGU_A7r",
-        "outputId": "d8f27def-7421-4c85-d04f-a6fb98cf608e",
+        "id": "QzUIrqK0HoBZ",
+        "outputId": "69bd2dc1-9935-48e8-99c6-92e40eb3bf38",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "File 'Data/pdfs/leph101.pdf' downloaded successfully.\n"
-          ]
-        }
-      ],
-      "source": [
-        "PDFDIR = Path('Data') / 'pdfs'\n",
-        "PDFDIR.mkdir(parents=True, exist_ok=True)\n",
-        "\n",
-        "url = \"https://github.com/messi10tom/NoteG/blob/3bb03449e23aa8701f7714624ffb197215309b9f/Data/pdfs/leph101.pdf?raw=true\"\n",
-        "filename = PDFDIR / 'leph101.pdf'\n",
-        "download_from_github_raw(url, filename)"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 4,
-      "metadata": {
-        "id": "pZOAvPHn_A7s"
-      },
-      "outputs": [],
-      "source": [
-        "def pdfparser(dir: Path) -> dict:\n",
-        "\n",
-        "    parser = {}\n",
-        "\n",
-        "    for pdf in dir.glob('*.pdf'):\n",
-        "        pdf_loader = PyPDFLoader(\n",
-        "            file_path = pdf,\n",
-        "            extract_images = False\n",
-        "        )\n",
-        "        parser[pdf.name] = pdf_loader\n",
-        "\n",
-        "    return parser\n"
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "We detected that you are passing `past_key_values` as a tuple and this is deprecated and will be removed in v4.43. Please use an appropriate `Cache` class (https://huggingface.co/docs/transformers/v4.41.3/en/internal/generation_utils#transformers.Cache)\n"
+          ]
+        }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
-      "metadata": {
-        "id": "IA5Fm9hI_A7s"
-      },
-      "outputs": [],
       "source": [
-        "parser = pdfparser(PDFDIR)\n",
-        "sample_loader = next(iter(parser.values()))\n",
         "\n",
-        "docs = []\n",
-        "docs_lazy = sample_loader.lazy_load()\n",
+        "# Retrieve and generate using the relevant snippets of the blog.\n",
+        "retriever = vectorstore.as_retriever()\n",
+        "prompt = hub.pull(\"rlm/rag-prompt\")\n",
         "\n",
-        "for doc in docs_lazy:\n",
-        "    docs.append(doc)\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 6,
+        "\n",
+        "def format_docs(docs):\n",
+        "    return \"\\n\\n\".join(doc.page_content for doc in docs)\n",
+        "\n",
+        "\n",
+        "rag_chain = (\n",
+        "    {\"context\": retriever | format_docs, \"question\": RunnablePassthrough()}\n",
+        "    | prompt\n",
+        "    | hf\n",
+        "    | StrOutputParser()\n",
+        ")"
+      ],
       "metadata": {
-        "id": "-r45A9ol_A7t",
-        "outputId": "deca57cb-1967-4a52-f7fc-926d1d26dbe6",
+        "id": "QvtKZpD8_n_x",
+        "outputId": "2f8a3c60-d62a-4e02-9a10-409b1fe4db10",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stdout",
+          "name": "stderr",
           "text": [
-            "Chapter One\n",
-            "ELECTRIC CHARGES\n",
-            "AND FIELDS\n",
-            "1.1  I NTRODUCTION\n",
-            "All of us have the experience of seeing a spark or hearing a crackle when\n",
-            "we take of f our synthetic clothes or sweater , particularly in dry weather .\n",
-            "Have you ever tried to find any explanation for this phenomenon? Another\n",
-            "common example of electric discharge is the lightning that we see in the\n",
-            "sky during thunderstor ms. W e also experience a sensation of an electric\n",
-            "shock either while opening the door of a car or holding the iron bar \n",
-            "\n",
-            "---\n",
-            "\n",
-            "2Physics\n",
-            "elektr on meaning amber . Many such pairs of materials wer e known which\n",
-            "on rubbing could attract light objects like straw, pith balls and bits of\n",
-            "papers.\n",
-            "It was observed that if two glass rods rubbed with wool or silk cloth\n",
-            "are brought close to each other , they r epel each other [Fig. 1.1(a)]. The\n",
-            "two strands of wool or two pieces of silk cloth, with which the rods were\n",
-            "rubbed, also r epel each other . However , the glass r od and wool attracted\n",
-            "each other . Similarly, two plastic r o\n",
-            "\n",
-            "---\n",
-            "\n",
-            "Electric Charges\n",
-            "and Fields\n",
-            "3A simple apparatus to detect charge  on a body  is the gold-leaf\n",
-            "electroscope [Fig. 1.2(a)]. It consists of a vertical metal rod housed in a\n",
-            "box, with two thin gold leaves attached to its bottom end. When a charged\n",
-            "object touches the metal knob at the top of the rod, charge flows on to\n",
-            "the leaves and they diverge. The degree of divergance is an indicator of\n",
-            "the amount of charge.\n",
-            "Try to understand why material bodies acquir e char ge. You know that\n",
-            "all matter is made \n",
-            "\n",
-            "---\n",
-            "\n"
+            "/usr/local/lib/python3.10/dist-packages/langsmith/client.py:354: LangSmithMissingAPIKeyWarning: API key must be provided when using hosted LangSmith API\n",
+            "  warnings.warn(\n"
           ]
         }
-      ],
-      "source": [
-        "for i in range(3):\n",
-        "    print(docs[i].page_content[:500])\n",
-        "    print('\\n---\\n')"
       ]
     },
     {
@@ -189,7 +194,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "88pwIe2P_A7u",
         "outputId": "716e8905-0e2c-4b6c-e3c1-ef211005c4f5",
@@ -221,7 +226,7 @@
       "metadata": {
         "id": "F0dcfsJqKx0m"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -261,7 +266,7 @@
           "height": 576
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -313,7 +318,7 @@
       "metadata": {
         "id": "--khFfxLPnWy"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -328,7 +333,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -352,7 +357,7 @@
       "metadata": {
         "id": "YPJCUsOMS06J"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -373,7 +378,7 @@
           "height": 489
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -419,7 +424,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -525,7 +530,7 @@
           "height": 576
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -571,7 +576,7 @@
       "metadata": {
         "id": "03cNcXb2E27A"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -590,7 +595,7 @@
       "metadata": {
         "id": "kaSlikCBGN2J"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -610,7 +615,7 @@
       "metadata": {
         "id": "ct77Eptl8yWG"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -625,7 +630,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -655,7 +660,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -688,7 +693,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
