--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -24,7 +24,7 @@
       "metadata": {
         "id": "tUGbHhEY_rws"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -59,27 +59,25 @@
         "  download_from_github_raw(url, filename)"
       ],
       "metadata": {
-        "id": "Rlc5B9lNCMcb",
-        "outputId": "382e5d49-7ed6-4796-f365-840155be32c2",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "Rlc5B9lNCMcb"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "File 'pdfs/leph101.pdf' downloaded successfully.\n"
-          ]
-        }
-      ]
+      "execution_count": 3,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "def loader(dir: Path) -> list:\n",
+        "def loader(dir: Path=None,\n",
+        "           pdf: Path=None) -> list:\n",
+        "\n",
+        "    if pdf:\n",
+        "        pdf_loader = PyPDFLoader(\n",
+        "            file_path = pdf,\n",
+        "            extract_images = False\n",
+        "            )\n",
+        "        docs = pdf_loader.load()\n",
+        "        return docs\n",
+        "\n",
         "    docs = []\n",
         "\n",
         "    for pdf in dir.glob('*.pdf'):\n",
@@ -94,17 +92,26 @@
       "metadata": {
         "id": "5U9aDk87Dt5X"
       },
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Prompt Engineering"
+      ],
+      "metadata": {
+        "id": "66vA0tyTNlT6"
+      }
     },
     {
       "cell_type": "code",
       "source": [
         "from langchain_huggingface import HuggingFacePipeline\n",
         "\n",
-        "embeddings = HuggingFaceEmbeddings(model_name=\"Qwen/Qwen2.5-1.5B\")\n",
+        "embeddings = HuggingFaceEmbeddings(model_name=\"Qwen/Qwen2.5-0.5B\")\n",
         "hf = HuggingFacePipeline.from_model_id(\n",
-        "    model_id=\"Qwen/Qwen2.5-1.5B\",\n",
+        "    model_id=\"Qwen/Qwen2.5-0.5B\",\n",
         "    task=\"text-generation\"\n",
         ")\n",
         "\n",
@@ -113,7 +120,83 @@
       "metadata": {
         "id": "ZNa3q0fBF6op"
       },
-      "execution_count": 3,
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "url = \"https://github.com/messi10tom/NotG/blob/main/Data/pdfs/microrna.pdf?raw=true\"\n",
+        "filename = Path('pdfs/microrna.pdf')\n",
+        "\n",
+        "download_from_github_raw(url, filename)"
+      ],
+      "metadata": {
+        "id": "uR4rTib3NrbO",
+        "outputId": "f0be02b9-971f-42ba-d3cf-8d5fd5fd01d5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "File 'pdfs/microrna.pdf' downloaded successfully.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "context = loader(pdf='pdfs/microrna.pdf')\n",
+        "\n",
+        "text_splitter = RecursiveCharacterTextSplitter(chunk_size=1000, chunk_overlap=200)\n",
+        "splits = text_splitter.split_documents(context)\n",
+        "vstore_for_context = Chroma.from_documents(documents=splits, embedding=embeddings)"
+      ],
+      "metadata": {
+        "id": "5WxIsPIoOIaf",
+        "outputId": "8faefaaf-b927-4697-c8d8-41d9548389bb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "We detected that you are passing `past_key_values` as a tuple and this is deprecated and will be removed in v4.43. Please use an appropriate `Cache` class (https://huggingface.co/docs/transformers/v4.41.3/en/internal/generation_utils#transformers.Cache)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "prompt = f\"\"\"You are an excellent prompt engineer. Based on the context given below, generate a concise prompt for generating short note.\n",
+        "The prompt should contain an example using the context. example prompt should be of the following format.\n",
+        "// context\n",
+        "  [{context}]\n",
+        "//example prompt\n",
+        "  //context\n",
+        "    [context]\n",
+        "  //example\n",
+        "    [example]\n",
+        "\n",
+        "//Your respond\n",
+        "\n",
+        "\"\"\""
+      ],
+      "metadata": {
+        "id": "8OpYn1DZb-8j"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -126,11 +209,11 @@
         "vectorstore = Chroma.from_documents(documents=splits, embedding=embeddings)"
       ],
       "metadata": {
-        "id": "QzUIrqK0HoBZ",
-        "outputId": "69bd2dc1-9935-48e8-99c6-92e40eb3bf38",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "QzUIrqK0HoBZ",
+        "outputId": "69bd2dc1-9935-48e8-99c6-92e40eb3bf38"
       },
       "execution_count": 4,
       "outputs": [
@@ -146,11 +229,38 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
         "# Retrieve and generate using the relevant snippets of the blog.\n",
         "retriever = vectorstore.as_retriever()\n",
-        "prompt = hub.pull(\"rlm/rag-prompt\")\n",
+        "prompt = hub.pull(\"rlm/rag-prompt\")"
+      ],
+      "metadata": {
+        "id": "dKjDwJsSJCk0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "prompt = \"\"\"You are a expert shortnote generator. You create shortnote based on the given context.\n",
+        "//context\n",
+        "  {context}\n",
+        "//example\n",
+        "  //context\n",
+        "    {example}\n",
         "\n",
+        "//Your respond\n",
+        "  \"\"\""
+      ],
+      "metadata": {
+        "id": "nxuKyH0cJ_OT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "\n",
         "def format_docs(docs):\n",
         "    return \"\\n\\n\".join(doc.page_content for doc in docs)\n",
@@ -164,11 +274,11 @@
         ")"
       ],
       "metadata": {
-        "id": "QvtKZpD8_n_x",
-        "outputId": "2f8a3c60-d62a-4e02-9a10-409b1fe4db10",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "QvtKZpD8_n_x",
+        "outputId": "2f8a3c60-d62a-4e02-9a10-409b1fe4db10"
       },
       "execution_count": 5,
       "outputs": [
@@ -737,10 +847,8 @@
       "version": "3.12.6"
     },
     "colab": {
-      "provenance": [],
-      "gpuType": "T4"
-    },
-    "accelerator": "GPU"
+      "provenance": []
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
