--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -12,7 +12,7 @@
         "from pathlib import Path\n",
         "from langchain import hub\n",
         "from langchain_chroma import Chroma\n",
-        "from langchain_community.document_loaders import PyPDFLoader # This line should work after installation\n",
+        "from langchain_community.document_loaders import PyPDFLoader # This line should work after installation (%pip install -qU pypdf)\n",
         "from langchain_core.output_parsers import StrOutputParser\n",
         "from langchain_core.runnables import RunnablePassthrough\n",
         "from langchain_huggingface.embeddings import HuggingFaceEmbeddings\n",
@@ -24,7 +24,7 @@
       "metadata": {
         "id": "tUGbHhEY_rws"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -61,7 +61,7 @@
       "metadata": {
         "id": "Rlc5B9lNCMcb"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -92,7 +92,7 @@
       "metadata": {
         "id": "5U9aDk87Dt5X"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -120,7 +120,7 @@
       "metadata": {
         "id": "ZNa3q0fBF6op"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -138,7 +138,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -165,7 +165,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -215,7 +215,7 @@
         "id": "QzUIrqK0HoBZ",
         "outputId": "69bd2dc1-9935-48e8-99c6-92e40eb3bf38"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -280,7 +280,7 @@
         "id": "QvtKZpD8_n_x",
         "outputId": "2f8a3c60-d62a-4e02-9a10-409b1fe4db10"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
